--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Привет
+    <p>Привет, это практическое задание</p>
+
     <script src="index.js"></script>
 </body>
 </html>
