--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Привет, это практическое задание</p>
+    <p>Привет, моё практическое задание в файле index.js, а ответы на теоритические вопросы в readme.</p>
 
     <script src="index.js"></script>
 </body>
